# NoDPI-By-KnopMops

./: README.md  example_start.bat
bats/: start_bat_uv.bat
proxy/nodpi/: .gitignore  blacklist.txt  nodpi.spec  pyproject.toml
proxy/nodpi/examples/: мтс_конфиг.txt
proxy/nodpi/src/: active_bypass.py  nd.py  nodpi.py  nodpi.spec  old_nd.py
